# software-rendering

./: .clang-format  CMakeLists.txt  LICENSE  README.md  common.hpp  main.cpp
